# franka-develop

./: README.md
.github/workflows/: docker_auto_build_push.yml
franka_moviet/.devcontainer/: Dockerfile  build.bash  devcontainer.json  docker-compose.yml
franka_moviet/nagisa_ws/src/my_mtc_arm/: CMakeLists.txt  package.xml
franka_moviet/nagisa_ws/src/my_mtc_arm/launch/: mtc_demo.launch.py  pick_place_demo.launch.py
franka_moviet/nagisa_ws/src/my_mtc_arm/src/: my_mtc_arm.cpp
franka_moviet/nagisa_ws/src/pick_place/: CMakeLists.txt  package.xml
franka_moviet/nagisa_ws/src/pick_place/config/: franka.config.yaml
franka_moviet/nagisa_ws/src/pick_place/launch/: pick_and_place.launch.py
franka_moviet/nagisa_ws/src/pick_place/src/: task.py
